增加资金变化
